# Matrix_verify

./: CMakeLists.txt  README.md
cmake/: dependencies.cmake
doc/: doc  fv_cublas_test.cu  qrb_test.cu
doc/from_zhangtianshuai/: FaceFeatureVerify.cpp  FaceFeatureVerify.cpp~
example/: CMakeLists.txt  test_fvapi.cpp  test_workman.cpp
include/fverify/: fv_bqueue.h  fv_cudalib.h  fv_database.h  fv_define.h  fv_jobtype.h  fv_worker.h  fv_workerman.h
include/fverify_api/: fverify_api.h
src/: CMakeLists.txt
src/fverify/: fv_cudalib.cu  fv_database.cu  fv_worker.cpp  fv_workerman.cpp
src/fverify_api/: fverify_api.cpp
